# learnC-

./: .gitignore  CMakeLists.txt
include/: myMath.h
math/: CMakeLists.txt  myMath.cpp
src/: main.cpp
